--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,21 +1,32 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header  [translucent]="true" >
+  <ion-toolbar color="warning">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
+      <ion-label>SmartSun</ion-label>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
+      
+    
+
+      <ion-title size="large"></ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <strong class="capitalize"></strong>
+    <ion-label>Consumo de Energia</ion-label>
+    <ion-item>
+      <ion-input label="KWh/mês" placeholder="Consumo Médio" ></ion-input>
+      <ion-button shape="round">Calcular</ion-button>
+    </ion-item>
+    <ion-item>
+      <ion-input label="KWh/mês" placeholder="Consumo Médio" ></ion-input>
+    </ion-item>
   </div>
 </ion-content>
+<!-- Consumo Médio, Gasto médio por Kw, M² de placa, investimento -->
